# rasberry_coordination

./: CMakeLists.txt  README.md  package.xml
msg/: AgentRegistration.msg  AgentRegistrationList.msg  AgentState.msg  AgentStateList.msg  FullLocation.msg  Interruption.msg  MarkerDetails.msg  Module.msg  NewAgentConfig.msg  NewAgentConfigGF.msg  NewAgentConfigGoFar.msg  NewAgentConfigSetup.msg  README.md  ServiceQuery.msg  ServiceResponse.msg  TaskDetails.msg  TasksDetails.msg  TopoLocation.msg
